[html]단어장 css 수정

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 10px;
+            font-size: 25px;
             font-weight: bold;
             margin: 20px;
         }
@@ -154,6 +154,7 @@
             text-align: left;
             padding: 10px;
             cursor: pointer;
+            z-index: 80;
         }
         .rig {
             width: 50%;
@@ -247,8 +248,8 @@
 </head>
 <body>
     <div class="titl">
-        <div class="lef">⬅ 모를때 슬라이드</div>
-        <div class="rig">알때 슬라이드 ➡</div>
+        <div class="lef">⬅ 모를때 </div>
+        <div class="rig">알때 ➡</div>
     </div>
     <div class="dic">📖 영영사전 </div>
     <div class="card-container"></div>
