--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="middleVoca.js"></script>
     <style>
+        #body {
+            margin: 0px;
+        }
+        .contents-body{
+
+
+
+        }
         .card-container {
             display: flex;
             justify-content: center;
@@ -77,7 +85,7 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            margin-top: -25px;
+            /*margin-top: -25px;*/
         }
         .button-container {
             display: flex;
@@ -141,26 +149,51 @@
         .speak2 {
             background-color: #77a7f5; /* 두 번째 버튼 색상 */
         }
+        .speak3 {
+            background-color: #77a7f5; /* 두 번째 버튼 색상 */
+        }
         .titl {
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 25px;
             font-weight: bold;
-            margin: 20px;
+            height: 25px;
+            width: 100%;
+            margin: -8px 0 16px -8px;
+            padding: 14px 16px 14px 0;
+            background-color: #77a7f5;
+            color: white;
         }
         .lef {
-            width: 50%;
-            text-align: left;
+            position: absolute;
+            top: 180px;
+            left: 10px;
+            width: auto;
+            text-align: center;
+            font-weight: bold;
             padding: 10px;
             cursor: pointer;
             z-index: 80;
+            color: red;
+            font-size: 12px;
+            border-radius: 50px;
+            background-color: #f7b5b090;
         }
         .rig {
-            width: 50%;
-            text-align: right;
+            position: absolute;
+            top: 180px;
+            right: 10px;
+            width: auto;
+            text-align: center;
+            font-weight: bold;
             padding: 10px;
             cursor: pointer;
+            z-index: 80;
+            color: blue;
+            font-size: 12px;
+            border-radius: 50px;
+            background-color: #2398F890;
         }
         .dic {
             position: absolute;
@@ -244,19 +277,38 @@
             font-size: 20px;
             cursor: pointer;
         }
+        .progressbg{
+            margin-bottom: 10px;
+            margin-left: 5%;
+            height: 10px;
+            width: 90%;
+            background-color: #cccccc;
+            border-radius: 10px;
+        }
+        .progressbar{
+            height: 10px;
+            width: 10%;
+            background-color: #2398F8;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="titl">
-        <div class="lef">⬅ 모를때 </div>
-        <div class="rig">알때 ➡</div>
+        단어 암기
     </div>
-    <div class="dic">📖 영영사전 </div>
-    <div class="card-container"></div>
-    <div class="navi-container"><span class="currentP">1</span><span>&nbsp;&nbsp;/&nbsp;&nbsp;</span><span class="totalP">10</span></div>
+    <div class="contents-body">
+        <div class="dic">📖 영영사전 </div>
+        <div class="lef"> <div>모를때</div><div>-------</div> </div>
+        <div class="rig"> <div>알 때</div><div>-------</div> </div>
+        <div class="card-container"></div>
+        <div class="progressbg"><div class="progressbar"></div></div>
+        <div class="navi-container"><span class="currentP">1</span><span>&nbsp;&nbsp;/&nbsp;&nbsp;</span><span class="totalP">10</span></div>
+    </div>
     <div class="button-container">
         <a href="#" class="speak_button speak1">🔊  단어</a>
         <a href="#" class="speak_button speak2">🔊  단어&뜻</a>
+<!--        <a href="#" class="speak_button speak3">🔊  자동재생</a>-->
     </div>
     <div class="button-container">
         <a href="#" class="button button0">미학습단어</a>
