--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <style>
         #body {
             margin: 0px;
+            padding: 0;
+            overflow: hidden; /* 전체 페이지에서 기본 스크롤 제거 */
         }
         .contents-header {
             display: flex;
