--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="middleVoca.js"></script>
+    <script type="text/javascript" src="middleVoca.js?v=2025032601"></script>
     <style>
         #body {
             margin: 0px;
