--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@
         .popup-content {
             background: white;
             width: 80%;
-            height: 85%;
+            height: 71vh;
             padding: 20px;
-            margin: 10% auto;
+            margin: 13% auto;
             border-radius: 10px;
             text-align: left;
             position: relative;
