--- a/index.html
+++ b/index.html
@@ -331,11 +331,11 @@
             font-size: 40px;
             line-height: 50px; /* 높이와 동일하게 설정 */
         }
-        .speak .play_icon{
-            line-height: 40px;
-            margin-top: 7px;
-            margin-left: 7px;
-        }
+        /*.speak .play_icon{*/
+        /*    line-height: 40px;*/
+        /*    margin-top: 7px;*/
+        /*    margin-left: 7px;*/
+        /*}*/
 
         /* 화면의 width가 작아질수록 버튼의 개수를 줄입니다. */
         @media (min-width: 768px) {
@@ -461,8 +461,8 @@
         </div>
         <div class="word-body">
             <div class="wordBox">
-                <div class="guideBox_left"> <div class="lef"> <div>모를때</div><div>👆---</div> </div></div>
-                <div class="guideBox_right"> <div class="rig"> <div>알 때</div><div>---👆</div> </div></div>
+                <div class="guideBox_left"> <div class="lef"> <div>몰라요</div><div>👆---</div> </div></div>
+                <div class="guideBox_right"> <div class="rig"> <div>알아요</div><div>---👆</div> </div></div>
                 <div class="card-container"></div>
             </div>
             <div class="dic_box">
